# osmtc2mongo

./: .travis.yml  Cargo.toml  README.md  taginfo.json
src/: lib.rs  main.rs
tests/: shapes_test.rs  stops_csv_tests.rs
tests/fixtures/: osm_fixture.osm  osm_fixture.osm.pbf  readme.md  sample-lite.osm.pbf  sample-lite.osm.xml  shape_with_platform.osm  shape_with_platform.osm.pbf
