[package]
name = "osm_transit_extractor"
version = "0.1.4"
authors = ["Pascal Rhod <pascal.rhod@canaltp.fr>", "Noémie Lehuby <noemie.lehuby@canaltp.fr>"]
edition="2018"

[dependencies]
csv = "1.0.7"
osmpbfreader = "0.13.0"
wkt = "0.5.0"
serde = "1.0.92"
serde_derive = "1.0.92"
structopt = "0.2.16"
structopt-derive = "0.2.16"
tempdir = "0.3.7"
log = "0.4.6"
simple_logger = "1.2.0"
geo-types = "0.4.3"
